--- a/app/src/main/res/layout/activity_chrono.xml
+++ b/app/src/main/res/layout/activity_chrono.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/calendar_fragment"
         tools:context=".Controllers.Activities.ChronoActivity">
@@ -26,12 +27,19 @@
             android:background="@color/colorPrimary"
             app:theme="@style/ToolBarStyle"/>
 
-    <FrameLayout
-            android:id="@+id/fragment_place"
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:padding="10dp"/>
+            android:layout_height="match_parent"
+            android:layout_below="@+id/activity_toolbar">
+
+        <FrameLayout
+                android:id="@+id/fragment_place"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:padding="10dp"/>
+
+    </RelativeLayout>
 
     <ProgressBar
             android:id="@+id/progress_bar"
