--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,5 +33,8 @@
     <color name="colorFoodOK">#19b480</color>
 
 
+    <color name="colorOrange">#d7b643</color>
+    <color name="colorBrown">#a66d14</color>
+
 
 </resources>
