--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="button_height">36dp</dimen>
     <dimen name="save_dialog_corners_radius">16dp</dimen>
     <dimen name="size_square_chrono_grid_stat">10dp</dimen>
+
+    <dimen name="height_legend_barchart">10dp</dimen>
+    <dimen name="width_legend_barchart">20dp</dimen>
+
 </resources>
