--- a/app/src/main/res/drawable/border_validation.xml
+++ b/app/src/main/res/drawable/border_validation.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
     >
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+        <shape android:shape="rectangle" >
             <gradient
                     android:type="linear"
                     android:centerX="10%"
@@ -17,7 +16,7 @@
     <item>
 
 
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+        <shape android:shape="rectangle" >
             <gradient
                     android:type="radial"
                     android:centerX="50%"
