--- a/app/src/main/res/layout/activity_chrono.xml
+++ b/app/src/main/res/layout/activity_chrono.xml
@@ -17,15 +17,20 @@
             android:clickable="true"
             android:focusable="true"
             android:animateLayoutChanges="true"
-            android:src="@drawable/image"/>
+            android:src="@drawable/main_background"/>
+
+    <include
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/activity_toolbar"
+            layout="@layout/buttons_main_activity"/>
 
     <android.support.v7.widget.Toolbar
             android:id="@+id/activity_toolbar"
             android:minHeight="?android:attr/actionBarSize"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            app:theme="@style/ToolBarStyle"/>
+            style="@style/ToolBarStyle"/>
 
     <RelativeLayout
             android:layout_width="match_parent"
