--- a/app/src/main/res/layout/panel_meal_content.xml
+++ b/app/src/main/res/layout/panel_meal_content.xml
@@ -19,7 +19,7 @@
             android:textSize="28sp"
             android:text="@string/panel_title"
             android:visibility="gone"
-            android:layout_gravity="center"/>
+            android:gravity="center"/>
 
     <!-- MESSAGE "aucun aliment sélectionné" -->
     <com.g.laurent.alitic.Views.MealTextView
@@ -31,7 +31,7 @@
             android:text="@string/message_no_food"
             android:layout_marginTop="20dp"
             android:visibility="gone"
-            android:layout_gravity="center"/>
+            android:gravity="center"/>
 
     <!-- View with all foods selected -->
     <com.g.laurent.alitic.Views.FoodLayout
