--- a/app/src/main/res/drawable/background_buttons_mainactivity.xml
+++ b/app/src/main/res/drawable/background_buttons_mainactivity.xml
@@ -4,7 +4,7 @@
     <item>
 
         <ripple
-                android:color="@color/colorPrimaryDark">
+                android:color="@color/colorPrimary">
             <item>
                 <shape android:shape="rectangle" >
                     <gradient
