--- a/app/src/main/res/layout/panel_meal_content.xml
+++ b/app/src/main/res/layout/panel_meal_content.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/linear_layout_panel"
         android:gravity="center"
         android:clickable="true"
-        android:focusable="true"
-        android:orientation="vertical">
+        android:focusable="true">
 
     <!-- TITLE MON REPAS-->
     <com.g.laurent.alitic.Views.MealTextView
@@ -16,29 +15,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fontName="Satisfy-Regular"
+            android:layout_alignTop="@+id/framelayout_foods"
             android:textSize="28sp"
             android:text="@string/panel_title"
-            android:visibility="gone"
-            android:gravity="center"/>
+            android:visibility="gone"/>
 
-    <!-- MESSAGE "aucun aliment sélectionné" -->
-    <com.g.laurent.alitic.Views.MealTextView
-            android:id="@+id/no_food_in_meal"
+    <FrameLayout
+            android:id="@+id/framelayout_foods"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fontName="Satisfy-Regular"
-            android:textSize="20sp"
-            android:text="@string/message_no_food"
-            android:layout_marginTop="20dp"
-            android:visibility="gone"
-            android:gravity="center"/>
+            android:layout_alignParentBottom="true"
+            android:layout_marginVertical="20dp">
 
-    <!-- View with all foods selected -->
-    <com.g.laurent.alitic.Views.FoodLayout
-            android:id="@+id/layout_all_foods"
-            android:layout_marginTop="20dp"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <!-- MESSAGE "aucun aliment sélectionné" -->
+        <com.g.laurent.alitic.Views.MealTextView
+                android:id="@+id/no_food_in_meal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fontName="Satisfy-Regular"
+                android:textSize="20sp"
+                android:text="@string/message_no_food"
+                android:visibility="gone"/>
 
-</LinearLayout>
+        <!-- View with all foods selected -->
+        <com.g.laurent.alitic.Views.FoodLayout
+                android:id="@+id/layout_all_foods"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+
+    </FrameLayout>
+
+</RelativeLayout>
