--- a/app/src/main/res/layout/panel_meal.xml
+++ b/app/src/main/res/layout/panel_meal.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/linear_layout_panel"
+        android:id="@+id/framelayout_panel"
         android:maxWidth="800dp"
         android:maxHeight="800dp"
         android:gravity="center"
