--- a/app/src/main/res/layout/panel_meal_content.xml
+++ b/app/src/main/res/layout/panel_meal_content.xml
@@ -1,49 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<com.g.laurent.alitic.Views.PanelLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/linear_layout_panel"
-        android:gravity="center"
-        android:clickable="true"
-        android:focusable="true">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TITLE MON REPAS-->
-    <com.g.laurent.alitic.Views.MealTextView
-            android:id="@+id/title_meal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fontName="Satisfy-Regular"
-            android:layout_alignTop="@+id/framelayout_foods"
-            android:textSize="28sp"
-            android:text="@string/panel_title"
-            android:visibility="gone"/>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/linear_layout_panel"
+            android:clickable="true"
+            android:focusable="true">
 
-    <FrameLayout
-            android:id="@+id/framelayout_foods"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginVertical="20dp">
-
-        <!-- MESSAGE "aucun aliment sélectionné" -->
+        <!-- TITLE MON REPAS-->
         <com.g.laurent.alitic.Views.MealTextView
-                android:id="@+id/no_food_in_meal"
+                android:id="@+id/title_meal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:fontName="Satisfy-Regular"
-                android:textSize="20sp"
-                android:text="@string/message_no_food"
-                android:visibility="gone"/>
+                android:layout_above="@+id/framelayout_foods"
+                android:textSize="28sp"
+                android:layout_centerInParent="true"
+                android:text="@string/panel_title"/>
 
-        <!-- View with all foods selected -->
-        <com.g.laurent.alitic.Views.FoodLayout
-                android:id="@+id/layout_all_foods"
+        <FrameLayout
+                android:id="@+id/framelayout_foods"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"/>
+                android:layout_alignParentBottom="true"
+                android:layout_centerInParent="true"
+                android:layout_marginVertical="20dp">
 
-    </FrameLayout>
+            <!-- MESSAGE "aucun aliment sélectionné" -->
+            <com.g.laurent.alitic.Views.MealTextView
+                    android:id="@+id/no_food_in_meal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:fontName="Satisfy-Regular"
+                    android:textSize="20sp"
+                    android:text="@string/message_no_food"
+                    android:visibility="gone"/>
 
-</RelativeLayout>
+            <!-- View with all foods selected -->
+            <com.g.laurent.alitic.Views.FoodLayout
+                    android:id="@+id/layout_all_foods"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
+
+        </FrameLayout>
+
+    </RelativeLayout>
+
+</com.g.laurent.alitic.Views.PanelLayout>
