--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,6 +73,7 @@
         <item name="android:focusable">true</item>
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:paddingTop">20dp</item>
+        <item name="android:paddingHorizontal">5dp</item>
         <item name="android:drawableTint">@color/colorPrimary</item>
         <item name="android:background">@drawable/background_buttons_mainactivity</item>
 
