Finalization PickActivity - creation of two children of PickActivity

--- a/app/src/main/res/layout/counter_layout.xml
+++ b/app/src/main/res/layout/counter_layout.xml
@@ -2,8 +2,8 @@
 <FrameLayout
         android:id="@+id/counter_layout"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_gravity="center">
 
     <ImageView
@@ -26,3 +26,4 @@
             android:gravity="center"/>
 
 </FrameLayout>
+
