--- a/app/src/main/res/layout/foodtype_viewholder.xml
+++ b/app/src/main/res/layout/foodtype_viewholder.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/linearlayout_foodtype"
-        android:background="@drawable/foodtype_item_bg">
-
-    <ImageView
-            android:id="@+id/image_foodtype"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:padding="8dp"
-            android:layout_marginBottom="5dp"
-            android:scaleType="centerInside"/>
-
-    <TextView
-            android:id="@+id/text_foodtype"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:gravity="center_horizontal|center_vertical"/>
+        android:background="@drawable/background_foodtype_meal_pick">
 
     <!--  LINE SEPARATOR  -->
     <View
             android:id="@+id/date_line_separator"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:layout_marginTop="5dp"
             android:background="#dfdfdf"/>
+
+    <ImageView
+            android:id="@+id/image_foodtype"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            android:padding="8dp"
+            android:scaleType="centerInside"/>
+
+    <TextView
+            android:id="@+id/name_foodtype"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:paddingBottom="5dp"
+            android:textAlignment="center"
+            android:layout_gravity="center"/>
 
 </LinearLayout>
