--- a/app/src/main/res/layout/gridviewholder.xml
+++ b/app/src/main/res/layout/gridviewholder.xml
@@ -14,6 +14,7 @@
                 android:id="@+id/image_meal"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
+                android:paddingTop="3dp"
                 android:scaleType="centerInside"/>
 
         <TextView
