--- a/app/src/main/res/layout/pick_meal_dialog.xml
+++ b/app/src/main/res/layout/pick_meal_dialog.xml
@@ -26,7 +26,10 @@
             android:minWidth="230dp"
             android:layout_height="250dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:scrollbars="vertical"
+            android:fadeScrollbars="false"
+            android:scrollbarThumbVertical="@android:color/darker_gray"/>
 
     <!-- BUTTONS -->
     <LinearLayout
