--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,7 +70,7 @@
         <item name="android:layout_height">@dimen/button_main_activity_size</item>
         <item name="android:elevation">10dp</item>
         <item name="android:clickable">true</item>
-        <item name="android:focusable">true</item>
+        <item name="android:focusable">false</item>
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:paddingTop">20dp</item>
         <item name="android:paddingHorizontal">5dp</item>
@@ -78,5 +78,6 @@
         <item name="android:background">@drawable/background_buttons_mainactivity</item>
 
     </style>
+
 
 </resources>
