--- a/app/src/main/res/layout/activity_chrono.xml
+++ b/app/src/main/res/layout/activity_chrono.xml
@@ -41,8 +41,7 @@
                 android:id="@+id/fragment_place"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:padding="10dp"/>
+                android:layout_centerInParent="true"/>
 
     </RelativeLayout>
 
