--- a/app/src/main/res/layout/food_stat_layout.xml
+++ b/app/src/main/res/layout/food_stat_layout.xml
@@ -25,7 +25,9 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center"
                 android:scaleType="centerInside"
-                android:src="@drawable/circle_white"/>
+                android:background="@drawable/circle_white"
+                app:civ_border_width="0dp"
+                app:civ_shadow="false"/>
 
         <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/food_image"
@@ -34,6 +36,7 @@
                 android:layout_gravity="center"
                 android:padding="5dp"
                 android:scaleType="centerInside"
+                android:background="@drawable/circle_white"
                 app:civ_border_width="0dp"
                 app:civ_shadow="false"/>
 
