--- a/app/src/main/res/layout/timeline_viewholder.xml
+++ b/app/src/main/res/layout/timeline_viewholder.xml
@@ -10,15 +10,15 @@
             android:id="@+id/timeline"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:markerSize="20dp"
-            app:lineWidth="3dp"
-            app:startLineColor="@color/colorTimeLine"
-            app:endLineColor="@color/colorTimeLine"
+            app:marker="@drawable/timeline_marker"
+            app:lineWidth="4dp"
+            app:startLineColor="@color/colorPrimary"
+            app:endLineColor="@color/colorPrimary"
             app:lineStyle="normal"/>
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         <RelativeLayout
                 android:padding="5dp"
@@ -51,23 +51,25 @@
                     android:id="@+id/grid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:numColumns="4"
                     android:layout_marginTop="10dp"
                     android:layout_below="@+id/hour"
-                    android:numColumns="4"
                     android:verticalSpacing="3dp"
-                    android:horizontalSpacing="3dp"/>
+                    android:horizontalSpacing="3dp"
+                    android:scrollbars="vertical"
+                    android:fadeScrollbars="false"
+                    android:scrollbarThumbVertical="@android:color/darker_gray"/>
 
         </RelativeLayout>
 
+        <!--
         <ImageView
                 android:id="@+id/timeline_viewholder"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"/>
-
+-->
     </FrameLayout>
-
-
 
 </LinearLayout>
 
