--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,12 +6,13 @@
     <color name="colorAccent">#d7b643</color>
 
     <!-- CHRONO ACTIVITY COLORS -->
-    <color name="colorTimeLine">#70dbdb</color>
-    <color name="colorTimeLineContent">#DDf6ffe8</color>
+    <color name="colorTimeLineContent">#66a66d14</color>
 
     <!-- STAT ACTIVITY COLORS -->
     <color name="color_selected_tab">#ffffff</color>
     <color name="color_unselected_tab">#D4E0F8</color>
+    <color name="colorSmallPieChartNok">#f1d1d0</color>
+    <color name="colorSmallPieChartOk">#c6e3bf</color>
 
     <!-- PICK ACTIVITY COLORS -->
     <color name="colorPanelMeal">#CCf2f2f2</color>
